--- a/script/build
+++ b/script/build
@@ -1,3 +1,3 @@
 #!/bin/zsh
 # TODO: rebuild
-javac -cp "jars/*" BulkClientDriverUnitTest.java BulkClientDriver.java DriverRunner.java
+javac -cp "jars/*" BulkClientDriverUnitTest.java BulkClientDriver.java DriverRunner.java DriverMonitor.java
